--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <img class="header__logo" src="./images/header-logo.svg" alt="Логотип">
             <ul class="header__lang">
                 <li class="header__lang-item"><a class="header__lang-link header__lang_marker " href="#" >Ru</a></li>
-                <li class="header__lang-item"><a class="header__lang-link " href="#" >En</a></li>
+                <li class="header__lang-item"><a class="header__lang-link " href="#" >Eаввn</a></li>
             </ul>
         </header>
 
