--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <h2 class="place__title">Карелия</h2>
                     <div class="place__website">
                         <div class="place__url-heading">URL </div>
-                        <a class="place__url-link" target="_blank" href="http://vodlozero.ru" target="_blank" >http://vodlozero.ru/</a>
+                        <a class="place__url-link" href="http://vodlozero.ru" target="_blank" >http://vodlozero.ru/</a>
                     </div>
                     <img class="place__image" src="./images/place-karelia.jpg" alt="картинка">
                     <div class="place__paragraph">
