--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             </ul>
         </header>
 
-        <section class="lead">
-            <h1 class="section-title section-title_theme_lead">Путешествия<br> по России</h1>
+         <section class="lead">
+            <h1 class="section-title section-title_theme_lead">Путешествия по России</h1>
             <p class="section-subtitle section-subtitle_theme_lead">Настоящая страна не в выпусках<br> новостей, а здесь.</p>
             <figure class="lead__pic">
                 <img class="lead__pic-image" src="./images/__image.png" alt="Картинка с маршрутом" >
