исправление после 1го КР отправка на 2 КР

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
         <header class="header">
             <img class="header__logo" src="./images/header-logo.svg" alt="Логотип">
             <ul class="header__lang">
-                <li class="header__lang-item"><a class="header__lang-link header__lang-marker " href="#" target="_blank" >Ru</a></li>
-                <li class="header__lang-item"><a class="header__lang-link " href="#" target="_blank">En</a></li>
+                <li class="header__lang-item"><a class="header__lang-link header__lang-marker" href="#" target="_blank" >Ru</a></li>
+                <li class="header__lang-item"><a class="header__lang-link header__lang-marker" href="#" target="_blank">En</a></li>
             </ul>
         </header>
 
          <section class="lead">
             <h1 class="section-title section-title_theme_lead">Путешествия по России</h1>
-            <p class="section-subtitle section-subtitle_theme_lead">Настоящая страна не в выпусках<br> новостей, а здесь.</p>
+            <p class="section-subtitle section-subtitle_theme_lead">Настоящая страна не в выпусках  новостей, а здесь.</p>
             <figure class="lead__pic">
                 <img class="lead__pic-image" src="./images/__image.png" alt="Картинка с маршрутом" >
                 <figcaption class="lead__pic-signature">ваша полка — верхняя</figcaption>
@@ -26,10 +26,16 @@
         </section>
 
         <section class="intro">
-            <h1 class="section-title section-title_theme_intro">Чего мы там не видели?</h1>
+            <h2 class="section-title section-title_theme_intro">Чего мы там не видели?</h2>
             <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
-            <p class="intro__list">Часовых поясов 11<br>Объектов природного наследия ЮНЕСКО 12<br>Объектов культурного наследия ЮНЕСКО 16<br>Природных заповедников 105<br>Аэропортов 241</p>
-        </section>
+            <ul class="intro__list">
+                <li class="intro__item">Часовых поясов <span class="intro__span-accent">11</span></li>
+                <li class="intro__item">Объектов природного наследия ЮНЕСКО  <span class="intro__span-accent">12</span></li>
+                <li class="intro__item"> Объектов культурного наследия ЮНЕСКО  <span class="intro__span-accent">16 </span></li>
+                <li class="intro__item">Природных заповедников <span class="intro__span-accent">105</span></li>
+                <li class="intro__item">Аэропортов <span class="intro__span-accent">241</span></li>
+            </ul>
+        </section>  
 
         <section class="photo-grid">
                 <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="Картинка" >
@@ -50,7 +56,7 @@
                 <div class="place">
                     <h2 class="place__title">Куршская коса</h2>
                     <div class="place__website">
-                        <div class="place__url-heading">URL </div>
+                        <p class="place__url-heading">URL </p>
                         <a class="place__url-link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
                     </div>
                     <img class="place__image" src="./images/nikita-tikhomirov-1153188-unsplash.jpg" alt="картинка">
@@ -62,7 +68,7 @@
                 <div class="place">
                     <h2 class="place__title">Кольский</h2>
                     <div class="place__website">
-                        <div class="place__url-heading">URL </div>
+                        <p class="place__url-heading">URL </p>
                         <a class="place__url-link" target="_blank" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" >National Geographic</a>
                     </div>
                     <img class="place__image" src="./images/place-kolsky.jpg" alt="картинка">
@@ -74,7 +80,7 @@
                 <div class="place">
                     <h2 class="place__title">Алтай</h2>
                     <div class="place__website">
-                        <div class="place__url-heading">URL </div>
+                        <p class="place__url-heading">URL </p>
                         <a class="place__url-link" target="_blank" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" >Facebook</a>
                     </div>
                     <img class="place__image" src="./images/place-altai.jpg" alt="картинка">
@@ -86,7 +92,7 @@
                 <div class="place">
                     <h2 class="place__title">Зимний Байкал</h2>
                     <div class="place__website">
-                        <div class="place__url-heading">URL </div>
+                        <p class="place__url-heading">URL </p>
                         <a class="place__url-link" target="_blank" href="https://vk.com/baikalmile" >https://vk.com/baikalmile</a>
                     </div>
                     <img class="place__image" src="./images/place-winter-baikal.jpg" alt="картинка">
@@ -98,7 +104,7 @@
                 <div class="place">
                     <h2 class="place__title">Карелия</h2>
                     <div class="place__website">
-                        <div class="place__url-heading">URL </div>
+                        <p class="place__url-heading">URL </p>
                         <a class="place__url-link" href="http://vodlozero.ru" target="_blank" >http://vodlozero.ru/</a>
                     </div>
                     <img class="place__image" src="./images/place-karelia.jpg" alt="картинка">
@@ -111,7 +117,7 @@
 
         <section class="cover">
             <a class="cover__background" target="_blank" href=" https://stampsy.com/na-elektrichkakh-do-baikala">
-                <h1 class="section-title section-title_theme_cover">До Байкала<br> «на собаках»</h1>
+                <h2 class="section-title section-title_theme_cover">До Байкала «на собаках»</h2>
                 <p class="section-subtitle section-subtitle_theme_cover">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
             </a>
 
@@ -126,7 +132,7 @@
                     <a href="https://calendar.yandex.ru" class="footer__link" target="_blank">Календарь</a>
                     <a href="https://travel.yandex.ru" class="footer__link" target="_blank">Путешествия</a>
                 </nav>
-                <div class="footer__autor">© 2020. Галлямов Салават</div>
+                <p class="footer__autor">© 2020. Галлямов Салават</p>
 
             </div>
         </section>  
