--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header class="header">
             <img class="header__logo" src="./images/header-logo.svg" alt="Логотип">
             <ul class="header__lang">
-                <li class="header__lang-item"><a class="header__lang-link header__lang-active" href="#" target="_blank" >Ru</a></li>
+                <li class="header__lang-item"><a class="header__lang-link header__lang-link_active" href="#" target="_blank" >Ru</a></li>
                 <li class="header__lang-item"><a class="header__lang-link " href="#" target="_blank">En</a></li>
             </ul>
         </header>
